Fixed spacing in recipies layout and added correct titles and images.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,10 +202,6 @@ body a:hover{
     margin-bottom: 20px;
 }
 
-.bombes{
-    background-image: url(../images/choco-bombes.png);
-}
-
 .list-group-item {
     border: none;
     padding: 0px;
@@ -313,6 +309,9 @@ body a:hover{
     background-size: cover;
     background-repeat: no-repeat;
     }
+    .recipe-section{
+        margin: 60px 0px 0px 0px;
+    }
 }
 
 @media screen and (min-width: 720px){
@@ -345,6 +344,9 @@ body a:hover{
     height: 300px;
     background-size: contain;
     background-repeat: no-repeat;
+    }
+    .recipe-section{
+        margin: 60px 0px 20px 0px;
     }
 }
 
